--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,17 @@
 server.port: 8000
+spring:
+    datasource:
+        url: jdbc:mysql://localhost:3306/blogengine?serverTimezone=UTC
+        username: root
+        password: testtest
+        driver-class-name: com.mysql.jdbc.Driver
+    jpa:
+        show-sql: true
+        properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+        hibernate.ddl-auto: update
+    flyway:
+        user: root
+        password: testtest
+        schemas: blogengine
+        url: jdbc:mysql://localhost:3306/blogengine?serverTimezone=UTC
+        enabled: false
