--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     jpa:
         show-sql: true
         properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
-        hibernate.ddl-auto: update
+        hibernate.ddl-auto: none
     flyway:
         user: root
         password: testtest
